[project]
name = "speaker-isolation"
description = "A custom node for ComfyUI that performs speaker diarization to isolate individual speaker audio tracks from a single audio source."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["pyannote.audio>=3.1 # Or a more specific version if known to be stable/required", "# torch and torchaudio are usually core ComfyUI dependencies,", "# but listing them explicitly can be good practice if specific versions are needed.", "# For now, relying on ComfyUI's environment for these.", "# torch", "# torchaudio"]

[project.urls]
Repository = "https://github.com/pmarmotte2/ComfyUI-Speaker-Isolation"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/pmarmotte2/ComfyUI-Speaker-Isolation/wiki"
"Bug Tracker" = "https://github.com/pmarmotte2/ComfyUI-Speaker-Isolation/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Speaker-Isolation"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

